# placeholder-game

./: .gitignore  README.md  build-deprecated.sh  build.sh  game  meson.build  reference.html  setup_dependencies.bash
src/: audio_manager.cpp  audio_manager.h  main.cpp  pfont.cpp  pfont.h  player.cpp  player.h  resource_manager.cpp  resource_manager.h  tile_renderer.cpp  tile_renderer.h  ui.cpp  ui.h  ui_layouts.cpp  ui_layouts.h
src/p/: p.h  parr.cpp  parr.h  ppath.cpp  ppath.h  pv.h
